[package]
name = "shortlyBackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
sha2 = "0.10"
base64 = "0.21.2"
serde = { version = "1.0", features = ["derive"] }

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"]